--- a/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
@@ -25,7 +25,7 @@
     </form>
 </div>
 @section topCSS{
-    <link rel="stylesheet" href="~/css/Seller/DetailTablePartial.css" />
+    <link href="~/css/seller/detailtablepartial.css" rel="stylesheet" />
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
@@ -33,12 +33,13 @@
     <link rel="stylesheet" href="~/css/Swiper/Swiper.css" />
 }
 @section topJS{
-    <script src="~/js/Seller/img-max-auto.js"></script>
+    <script src="~/js/seller/imgmaauto.js"></script>
 }
 @section endJS{
     <!-- Swiper JS -->
     <script src="~/lib//Swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
     <script src="~/js/Swiper/Swiper.js"></script>
-    <script src="~/js/Seller/DetailTablePartial.js"></script>
+    <script src="~/js/seller/detailtablepartial.js"></script>
+    <script src="~/js/seller/reloadbydatetime.js"></script>
 }
