--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -30,10 +30,10 @@
     </div>
 </div>
 @section topCSS{
-    <link rel="stylesheet" href="~/css/Seller/EditTablePartial.css" />
+    <link href="~/css/seller/edittablepartial.css" rel="stylesheet" />
 }
 
 @section endJS{
-    <script src="~/js/Seller/EditTablePartial.js"></script>
+    <script src="~/js/seller/edittablepartial.js"></script>
     <partial name="_ValidationScriptsPartial" />
 }
