--- a/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductInformation.cshtml
@@ -27,7 +27,7 @@
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.Title)</td>
             <td>
                 <div class="d-flex">
-                    <textarea asp-for="Title" class="form-control show-length focus" placeholder="輸入書名"></textarea>
+                    <textarea asp-for="Title" class="form-control show-length" placeholder="輸入書名"></textarea>
                     <p id="Title_length" class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="Title" class="text-danger"></span>
@@ -37,7 +37,7 @@
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.ISBN)</td>
             <td>
                 <div class="d-flex">
-                    <textarea asp-for="ISBN" class="form-control show-length focus" placeholder="輸入ISBN" pattern="\d*" oninput="process(this)"></textarea>
+                    <textarea asp-for="ISBN" class="form-control show-length" placeholder="輸入ISBN" pattern="\d*" oninput="process(this)"></textarea>
                     <p id="ISBN_length" class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="ISBN" class="text-danger"></span>
@@ -47,7 +47,7 @@
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.Author)</td>
             <td>
                 <div class="d-flex">
-                    <textarea asp-for="Author" class="form-control show-length focus" placeholder="輸入作者"></textarea>
+                    <textarea asp-for="Author" class="form-control show-length" placeholder="輸入作者"></textarea>
                     <p id="Author_length" class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="Author" class="text-danger"></span>
@@ -57,7 +57,7 @@
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.Publisher)</td>
             <td>
                 <div class="d-flex">
-                    <textarea asp-for="Publisher" class="form-control show-length focus" placeholder="輸入出版商"></textarea>
+                    <textarea asp-for="Publisher" class="form-control show-length" placeholder="輸入出版商"></textarea>
                     <p id="Publisher_length" class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="Publisher" class="text-danger"></span>
@@ -67,7 +67,7 @@
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.PublicationDate)</td>
             <td>
                 <div class="d-flex">
-                    <input type="date" asp-for="PublicationDate" class="form-control focus" />
+                    <input type="date" asp-for="PublicationDate" class="form-control" />
                     <p class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="PublicationDate" class="text-danger"></span>
@@ -77,7 +77,7 @@
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.Degree)</td>
             <td>
                 <div class="d-flex">
-                    <textarea asp-for="Degree" class="form-control show-length focus" placeholder="輸入新舊程度"></textarea>
+                    <textarea asp-for="Degree" class="form-control show-length" placeholder="輸入新舊程度"></textarea>
                     <p id="Degree_length" class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="Degree" class="text-danger"></span>
@@ -87,7 +87,7 @@
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.ContentText)</td>
             <td>
                 <div class="d-flex">
-                    <textarea asp-for="ContentText" class="form-control show-length focus" placeholder="輸入內文"></textarea>
+                    <textarea asp-for="ContentText" class="form-control show-length" placeholder="輸入內文"></textarea>
                     <p id="ContentText_length" class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="ContentText" class="text-danger"></span>
