--- a/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
@@ -8,57 +8,52 @@
 }
 @if (controller == "Seller")
 {
-    <div class="d-block">
-        <div class="d-flex d-md-none hamber-box mb-3" style="width: fit-content;">
-            <i class="bi bi-list" data-toggle="collapse" data-target=".aside-collapse" id="hamber" style="font-size: 26px;"></i>
-        </div>
-        <ul class="aside-collapse collapse d-md-block pl-0" id="menu" style="transition: .5s;">
-            <li class="list-unstyled py-2" style=" background-color: #80808050;">
-                <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>訂單管理</strong></p>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Index", "Seller", new {})">待辦事項清單</a>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MySalesMoney", "Seller", new {})">我的銷售(金錢)</a>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MySalesBarter", "Seller", new {})">我的銷售(以物易物)</a>
-            </li>
-            <li class="list-unstyled py-2" style=" background-color: #80808050;">
-                <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>商品管理</strong></p>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MyProductsMoney", "Seller", new {})">我的商品(金錢)</a>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MyProductsBarter", "Seller", new {})">我的商品(以物易物)</a>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Create", "Seller", new {})">新增商品</a>
-            </li>
-        </ul>
-    </div>
+    <link href="~/css/seller/aside.css" rel="stylesheet" />
+    <ul class="pl-0" id="menu" style="border-right: 1px solid black; border-bottom: 1px solid black; height: 100%;">
+        <li class="list-unstyled py-3" style=" background-color: #80808050;">
+            <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>訂單管理</strong></p>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Index", "Seller", new {})">待辦事項清單</a>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MySalesMoney", "Seller", new {})">我的銷售(金錢)</a>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MySalesBarter", "Seller", new {})">我的銷售(以物易物)</a>
+        </li>
+        <li class="list-unstyled py-3" style=" background-color: #80808050;">
+            <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>商品管理</strong></p>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MyProductsMoney", "Seller", new {})">我的商品(金錢)</a>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MyProductsBarter", "Seller", new {})">我的商品(以物易物)</a>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Create", "Seller", new {})">新增商品</a>
+        </li>
+    </ul>
+    <script src="~/js/seller/aside.js"></script>
 }
-else if (controller == "Account" && (action == "Details" || action == "ChangeUserInfo" || action == "ChangePassword"))
+else if (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo"))
 {
-    <div class="d-block">
-        <div class="d-flex d-md-none hamber-box mb-3" style="width: fit-content;">
-            <i class="bi bi-list" data-toggle="collapse" data-target=".aside-collapse" id="hamber" style="font-size: 26px;"></i>
-        </div>
-        <ul class="aside-collapse collapse d-md-block pl-0" id="menu" style="transition: .5s;">
-            <li class="list-unstyled py-2" style=" background-color: #80808050;">
-                <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>個人管理</strong></p>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Details", "Account", new {})">我的資訊</a>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("ChangeUserInfo", "Account", new {})">變更資訊</a>
-            </li>
-            <li class="list-unstyled py-2">
-                <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("ChangePassword", "Account", new {})">變更密碼</a>
-            </li>
-        </ul>
-    </div>
+    <link href="~/css/seller/aside.css" rel="stylesheet" />
+    <ul class="pl-0" id="menu" style="border-right: 1px solid black; border-bottom: 1px solid black; height: 100%;">
+        <li class="list-unstyled py-3" style=" background-color: #80808050;">
+            <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>個人管理</strong></p>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Details", "Account", new {})">我的資訊</a>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("ChangeUserInfo", "Account", new {})">變更資訊</a>
+        </li>
+        <li class="list-unstyled py-3">
+            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("ChangePassword", "Account", new {})">變更密碼</a>
+        </li>
+    </ul>
+    <script src="~/js/seller/aside.js"></script>
 }
+
