Add seller role verify in seller controller

--- a/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
@@ -14,4 +14,9 @@
         <li>@roleClaim.Value</li>
     }
 </ul>
-<p>本報表僅限Administrator群組存取</p>
+<p>本網站限Seller群組存取</p>
+
+<div>
+    <a asp-action="Index" asp-controller="Home">回首頁</a>
+    <a asp-action="SignOut" asp-controller="Account" class="ml-5 text-danger">登出</a>
+</div>
