--- a/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using CoreMVC5_UsedBookProject.ViewModel;
-@model ViewOrder
-@*
+﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -9,23 +7,44 @@
 
 <div class="container-fluid pb-5">
     <h1>待辦事項清單</h1>
-    <p>你的待處理事項</p>
+    <h2>你的待處理事項<strong>(金錢)</strong></h2>
     <div class="row">
         <div class="col-4 px-1 my-1">
-            <div class="py-2" style="@(Model.OrdersCount["待確認"] > 0 ? "background-color: #80808050;" : "background-color: #80808025;")">
-                <p class="text-center" style="@(@Model.OrdersCount["待確認"] > 0 ? "color: red;" : "")">@Model.OrdersCount["待確認"]</p>
+            <div class="py-2" style="@(Model[0]["待確認"] > 0 ? "background-color: #80808050;" : "background-color: #80808025;")">
+                <p class="text-center" style="@(@Model[0]["待確認"] > 0 ? "color: red;" : "")">@Model[0]["待確認"]</p>
                 <p class="text-center">待確認訂單</p>
             </div>
         </div>
         <div class="col-4 px-1 my-1">
             <div class="py-2" style="background-color: #80808025;">
-                <p class="text-center">@Model.OrdersCount["已完成"]</p>
+                <p class="text-center">@Model[0]["已完成"]</p>
                 <p class="text-center">已處理訂單</p>
             </div>
         </div>
         <div class="col-4 px-1 my-1">
-            <div class="py-2" style="@(Model.OrdersCount["待取消"] > 0 ? "background-color: #80808050;" : "background-color: #80808025;")">
-                <p class="text-center" style="@(@Model.OrdersCount["待取消"] > 0 ? "color: red;" : "")">@Model.OrdersCount["待取消"]</p>
+            <div class="py-2" style="@(Model[0]["待取消"] > 0 ? "background-color: #80808050;" : "background-color: #80808025;")">
+                <p class="text-center" style="@(@Model[0]["待取消"] > 0 ? "color: red;" : "")">@Model[0]["待取消"]</p>
+                <p class="text-center">待取消訂單</p>
+            </div>
+        </div>
+    </div>
+    <h2>你的待處理事項<strong>(以物易物)</strong></h2>
+    <div class="row">
+        <div class="col-4 px-1 my-1">
+            <div class="py-2" style="@(Model[1]["待確認"] > 0 ? "background-color: #80808050;" : "background-color: #80808025;")">
+                <p class="text-center" style="@(@Model[1]["待確認"] > 0 ? "color: red;" : "")">@Model[1]["待確認"]</p>
+                <p class="text-center">待確認訂單</p>
+            </div>
+        </div>
+        <div class="col-4 px-1 my-1">
+            <div class="py-2" style="background-color: #80808025;">
+                <p class="text-center">@Model[1]["已完成"]</p>
+                <p class="text-center">已處理訂單</p>
+            </div>
+        </div>
+        <div class="col-4 px-1 my-1">
+            <div class="py-2" style="@(Model[1]["待取消"] > 0 ? "background-color: #80808050;" : "background-color: #80808025;")">
+                <p class="text-center" style="@(@Model[1]["待取消"] > 0 ? "color: red;" : "")">@Model[1]["待取消"]</p>
                 <p class="text-center">待取消訂單</p>
             </div>
         </div>
