--- a/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NowPageMySales.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModel;
-@model ViewOrder
+@model MySalesViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
