主頁面更新與按鈕處理

--- a/CoreMVC5_UsedBookProject/Views/Shared/_AdminLoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_AdminLoginStatusPartial.cshtml
@@ -1,18 +1,19 @@
-﻿<ul class="navbar-nav flex-grow-1 button-cover">
+﻿
+<ul class="navbar-nav flex-grow-1 button-cover">
     @if (User.Identity.IsAuthenticated)
     {
         @*已登入*@
-        <li>
+        <li class="nav-item button-cover-nav">
             <div class="login-info">
-                <a href="#" class="login-name">@User.Identity.Name</a>
+                <a class="login-name button-cover" asp-controller="AdministratorHomePage" asp-action="AdministratorHomePage">@User.Identity.Name</a>
                 <span class="spacer"></span>
-                @Html.ActionLink("登出", "SignOut", "AdministratorLogin", null, new { @class = "btn btn-danger btn-logout" })
+                @Html.ActionLink("登出", "SignOut", "AdministratorLogin", null, new { @class = "btn btn-danger btn-logout-view button-cover" })
             </div>
         </li>
     }
     else
     {
         @*未登入*@
-        <li><a href="@Url.Action("Login", "AdministratorLogin")" class="btn btn-login">登入</a></li>
+        <li><a href="@Url.Action("Login", "AdministratorLogin")" class="btn btn-login">管理員登入</a></li>
     }
 </ul>
