--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -6,6 +6,14 @@
     {
         Layout = "_LayoutSeller";
     }
+    else if (controller == "AdministratorLogin")
+    {
+        Layout = "_LayoutAdminLogin";
+    }
+    else if (controller == "AdministratorHomePage")
+    {
+        Layout = "_LayoutAdminHomePage";
+    }
     else
     {
         Layout = "_Layout";
