--- a/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "登入";
 }
 
-<h1>登入</h1>
+<h1>管理員登入</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -21,7 +21,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="登入" class="btn btn-primary btn-login" />
+                <input type="submit" value="登入" class="btn btn-primary btn-login-view" />
             </div>
         </form>
     </div>
